// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsDynamoDBServiceModule UT input changes should handle GlobalSecondaryIndexes change should add a GSI to an existing table 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -6,2 +6,6 @@
    }
+   attribute {
+     name = "email"
+     type = "S"
+   }
    billing_mode = "PROVISIONED"
@@ -15,2 +19,9 @@
    stream_view_type = "NEW_AND_OLD_IMAGES"
+   global_secondary_index {
+     hash_key = "email"
+     name = "GSI-email"
+     projection_type = "ALL"
+     read_capacity = 5
+     write_capacity = 5
+   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle GlobalSecondaryIndexes change should create table with GSI 1`] = `
"# service/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

resource "aws_dynamodb_table" "dynamodb-test-table" {
  provider = aws._123-us-east-1
  attribute {
    name = "AccountId"
    type = "S"
  }
  attribute {
    name = "email"
    type = "S"
  }
  billing_mode = "PROVISIONED"
  deletion_protection_enabled = false
  hash_key = "AccountId"
  name = "test-table"
  table_class = "STANDARD"
  read_capacity = 5
  write_capacity = 5
  stream_enabled = true
  stream_view_type = "NEW_AND_OLD_IMAGES"
  global_secondary_index {
    hash_key = "email"
    name = "GSI-email"
    projection_type = "ALL"
    read_capacity = 5
    write_capacity = 5
  }
}

# service/outputs.tf
output "dynamodb-test-table-TableArn" {
  value = aws_dynamodb_table.dynamodb-test-table.arn
}

# service/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

# service/variables.tf
<empty>"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle GlobalSecondaryIndexes change should delete a GSI from an existing table 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -6,6 +6,2 @@
    }
-   attribute {
-     name = "email"
-     type = "S"
-   }
    billing_mode = "PROVISIONED"
@@ -19,9 +15,2 @@
    stream_view_type = "NEW_AND_OLD_IMAGES"
-   global_secondary_index {
-     hash_key = "email"
-     name = "GSI-email"
-     projection_type = "ALL"
-     read_capacity = 5
-     write_capacity = 5
-   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle GlobalSecondaryIndexes change should replace a GSI in an existing table 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -7,3 +7,3 @@
    attribute {
-     name = "email"
+     name = "UserId"
      type = "S"
@@ -20,4 +20,4 @@
    global_secondary_index {
-     hash_key = "email"
-     name = "GSI-email"
+     hash_key = "UserId"
+     name = "GSI-user"
      projection_type = "ALL""
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle LocalSecondaryIndexes change should create table with LSI 1`] = `
"# service/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

resource "aws_dynamodb_table" "dynamodb-test-table" {
  provider = aws._123-us-east-1
  attribute {
    name = "AccountId"
    type = "S"
  }
  attribute {
    name = "SortKey"
    type = "S"
  }
  attribute {
    name = "created"
    type = "N"
  }
  billing_mode = "PROVISIONED"
  deletion_protection_enabled = false
  hash_key = "AccountId"
  name = "test-table"
  table_class = "STANDARD"
  range_key = "SortKey"
  read_capacity = 5
  write_capacity = 5
  local_secondary_index {
    name = "LSI-created"
    projection_type = "ALL"
    range_key = "created"
  }
}

# service/outputs.tf
output "dynamodb-test-table-TableArn" {
  value = aws_dynamodb_table.dynamodb-test-table.arn
}

# service/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

# service/variables.tf
<empty>"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle StreamSpecification change 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -13,2 +13,4 @@
    write_capacity = 5
+   stream_enabled = true
+   stream_view_type = "NEW_AND_OLD_IMAGES"
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle StreamSpecification change 3`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -13,4 +13,2 @@
    write_capacity = 5
-   stream_enabled = true
-   stream_view_type = "NEW_AND_OLD_IMAGES"
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle billingMode change 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -11,4 +11,4 @@
    table_class = "STANDARD"
-   read_capacity = 5
-   write_capacity = 5
+   read_capacity = 10
+   write_capacity = 10
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle billingMode change 3`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -6,3 +6,3 @@
    }
-   billing_mode = "PROVISIONED"
+   billing_mode = "PAY_PER_REQUEST"
    deletion_protection_enabled = false
@@ -11,4 +11,6 @@
    table_class = "STANDARD"
-   read_capacity = 10
-   write_capacity = 10
+   on_demand_throughput {
+     max_read_request_units = 5
+     max_write_request_units = 5
+   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle timeToLiveAttribute change 1`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -13,2 +13,6 @@
    write_capacity = 5
+   ttl {
+     attribute_name = "expiresAt"
+     enabled = true
+   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT input changes should handle timeToLiveAttribute change 3`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -13,6 +13,2 @@
    write_capacity = 5
-   ttl {
-     attribute_name = "expiresAt"
-     enabled = true
-   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT should CUD 2`] = `"<no changes>"`;

exports[`AwsDynamoDBServiceModule UT should CUD 4`] = `
"- service/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service/main.tf
resource "aws_dynamodb_table" "dynamodb-test-table" {
  provider = aws._123-us-east-1
  attribute {
    name = "AccountId"
    type = "S"
  }
  billing_mode = "PROVISIONED"
  deletion_protection_enabled = false
  hash_key = "AccountId"
  name = "test-table"
  table_class = "STANDARD"
  read_capacity = 5
  write_capacity = 5
}

- service/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service/outputs.tf
output "dynamodb-test-table-TableArn" {
  value = aws_dynamodb_table.dynamodb-test-table.arn
}

- service/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service/variables.tf
<empty>"
`;

exports[`AwsDynamoDBServiceModule UT should CUD tags 2`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -14,3 +14,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsDynamoDBServiceModule UT should CUD tags 4`] = `
"~ service/main.tf resource "aws_dynamodb_table" "dynamodb-test-table" {
@@ -13,6 +13,2 @@
    write_capacity = 5
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsDynamoDBServiceModule UT should handle moduleId change 1`] = `
"- service-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service-1/main.tf
resource "aws_dynamodb_table" "dynamodb-test-table" {
  provider = aws._123-us-east-1
  attribute {
    name = "AccountId"
    type = "S"
  }
  billing_mode = "PAY_PER_REQUEST"
  deletion_protection_enabled = false
  hash_key = "AccountId"
  name = "test-table"
  table_class = "STANDARD"
  on_demand_throughput {
    max_read_request_units = 5
    max_write_request_units = 5
  }
}

- service-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service-1/outputs.tf
output "dynamodb-test-table-TableArn" {
  value = aws_dynamodb_table.dynamodb-test-table.arn
}

- service-1/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service-1/variables.tf
<empty>

+ service-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ service-2/main.tf
resource "aws_dynamodb_table" "dynamodb-test-table" {
  provider = aws._123-us-east-1
  attribute {
    name = "AccountId"
    type = "S"
  }
  billing_mode = "PAY_PER_REQUEST"
  deletion_protection_enabled = false
  hash_key = "AccountId"
  name = "test-table"
  table_class = "STANDARD"
  on_demand_throughput {
    max_read_request_units = 5
    max_write_request_units = 5
  }
}

+ service-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ service-2/outputs.tf
output "dynamodb-test-table-TableArn" {
  value = aws_dynamodb_table.dynamodb-test-table.arn
}

+ service-2/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

+ service-2/variables.tf
<empty>"
`;
